se añadio boton en la section 10

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -276,7 +276,6 @@
 
 			<section class="section_ten">
 				<div class="container">
-
 					<h3 id="title1" class="txt-highlight">PEOPLE</h3>
 					<h2>Behind the Currency of the Internet</h2>
 					<h3 id="title2" class="txt-highlight">Core Team</h3>
@@ -298,6 +297,10 @@
 							<p class="team-people-title">{{people.employment}}</p>
 						</div>
 					</div>
+
+					<a href="">
+						<button class="meet-team">LEARN MORE ABOUT THE TEAM</button>
+					</a>
 				</div>
 			</section>
 			
