--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -816,3 +816,25 @@ h3#title3{
 	margin-bottom: 10vh !important;
 	text-align: center;
 }
+
+
+.meet-team {
+	border: none;
+    width: 235px;
+    height: 37px;
+    border-radius: 16px;
+    background-color: #2cbedf;
+    box-shadow: 0 4px 10px 0 rgba(43,96,143,.3);
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    margin-top: 35px;
+    cursor: pointer;
+    transition: .6s all ease-in;
+    font-size: 13px;
+}
+
+.meet-team:hover  {
+    transition: .6s all ease-in;
+    background-color: #2c84df;
+}
