--- a/app/view/index.html
+++ b/app/view/index.html
@@ -55,8 +55,29 @@
 		<main>
 			<section class="section_one">
 				<div class="content">
+					<div class="overview-copy-container">
+						<h4>
+							<span class="white">COTI - C</span>URRENCY 
+							<span class="white">O</span>F
+							<span class="white">T</span>HE
+							<span class="white">I</span>NTERNET	
+						</h4>
+
+						<h1>Finally, a digital currency built for payments</h1>
+
+						<form>
+							<input type="email" placeholder="YOUR EMAIL">
+							<button>Stay Informed</button>	
+						</form>
+
+						<h4 class="">OUR PRIVATE SALE HAS STARTED</h4>
+					</div>
 					<div class="img_background">
-						
+						<div class="overview-hex">
+							<div class="overview-hex-image">
+								<div class="overview-hex-play"></div>
+							</div>							
+						</div>
 					</div>
 				</div>
 			</section>
