--- a/app/view/index.html
+++ b/app/view/index.html
@@ -66,8 +66,9 @@
 						<h1>Finally, a digital currency built for payments</h1>
 
 						<form>
+							<div class="email"><i class="far fa-envelope"></i></div>
 							<input type="email" placeholder="YOUR EMAIL">
-							<button>Stay Informed</button>	
+							<button type="submit">Stay Informed</button>	
 						</form>
 
 						<h4 class="">OUR PRIVATE SALE HAS STARTED</h4>
