--- a/app/view/faq.html
+++ b/app/view/faq.html
@@ -65,14 +65,20 @@
 				<div class="content">
 					<aside id="categories">
 						<ul id="categories-wrapper">
-							<li class="category" ng-click="addClassBarHorizontal(0)">about yot []</li>
-							<li class="category" ng-click="addClassBarHorizontal(1)">offering []</li>
-							<li class="category" ng-click="addClassBarHorizontal(2)">community []</li>
-							<li class="category" ng-click="addClassBarHorizontal(3)">industry []</li>
-							<li class="category" ng-click="addClassBarHorizontal(4)">token sale []</li>
-							<li class="category" ng-click="addClassBarHorizontal(5)">mediators []</li>
+							<li class="category" ng-repeat="faq in faqs">{{faq.category}} [{{faq.questions.length}}]</li>
 						</ul>
 					</aside>
+
+					<div id="questions" ng-repeat="faq in faqs">
+						<h1 id="category-selected" >{{faq.title}}</h1>
+						<ul id="questions-wrapper">
+							<li class="question-wrapper" ng-repeat="question in faq.questions">
+								<h3>{{question.title}}</h3>
+
+								<p class="">{{question.answer}}</p>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 		</main>
