--- a/app/view/faq.html
+++ b/app/view/faq.html
@@ -71,12 +71,12 @@
 
 					<div id="questions">
 						<div ng-repeat="faq in faqs">
-							<h1 ng-if="faq.categoryShow" id="category-selected" >{{faq.title}}</h1>
+							<h3 ng-if="faq.categoryShow" id="category-selected" >{{faq.title}}</h3>
 							<ul ng-if="faq.categoryShow" id="questions-wrapper">
 								<li class="question-wrapper" ng-repeat="question in faq.questions">
-									<h3>{{question.title}}</h3>
+									<h3 class="question">{{question.title}}</h3>
 
-									<p class="">{{question.answer}}</p>
+									<p class="answer">{{question.answer}}</p>
 								</li>
 							</ul>
 						</div>
