--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -1281,7 +1281,7 @@ div#token.overview-copy-container > div.token-header-buttons {
 .token-header-buttons button {
     width: 248px;
     height: 36px;
-    margin-top: 1vh;
+    margin-top: 2vh;
     border-radius: 16px;
     box-shadow: 0 4px 10px 0 rgba(43,96,143,.3);
     font-family: 'Titillium Web',sans-serif;
@@ -1308,4 +1308,159 @@ div#token.overview-copy-container > div.token-header-buttons {
 
 .token-header-buttons button.token-economy {
 	background-color: #2ca3ed;
+}
+
+.token-header-buttons button:hover{
+	box-shadow: 0 4px 10px 0 rgba(43,96,143,1);
+    transition: .4s all ease-out;
+}
+
+section#basics {
+    display: block;
+    height: auto;
+    text-align: center;
+}
+
+section#basics .content {
+	display: flex;
+    flex-wrap: wrap;
+    margin: 10vh auto;
+    max-width: 1440px;
+    padding: 0 5%;
+    width: 100%;
+    height: auto;	
+}
+
+section#basics .basics-what-coti {
+    background: url(../img/what-coti.svg) center center no-repeat;
+    background-position: contain;
+    height: 200px;
+    margin: 0 auto;
+}
+
+section#basics .content>div {
+    width: 40%;
+    max-width: 450px;
+    text-align: left;
+}
+
+section#basics .content>div:nth-child(even) {
+    margin: 5vh 3% 5vh auto;
+}
+
+section#basics .content>div:nth-child(odd) {
+    margin: 5vh auto 5vh 3%;
+}
+
+section#basics .basics-what-token {
+    background: url(../img/what-token.svg) center center no-repeat;
+    background-position: contain;
+    height: 200px;
+    margin: 0 auto;
+}
+
+section#basics .basics-participate {
+    background: url(../img/participate.svg) center center no-repeat;
+    background-position: contain;
+    height: 200px;
+    margin: 0 auto;
+}
+
+section#basics .content h3 {
+    width: 100%;
+    margin-bottom: 5vh;
+    text-align: center;
+}
+
+section#status-offering {
+    display: block;
+    height: auto;
+    text-align: center;
+    background-image: linear-gradient(62deg,#194aad,#014a78);
+}
+
+section#status-offering .status-offering-offering {
+    background: url(../img/offering.svg) center center no-repeat;
+    background-size: contain;
+    height: 300px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+section#status-offering .status-offering-status {
+    background: url(../img/status.svg) center center no-repeat;
+    background-size: contain;
+    height: 200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+section#status-offering .content {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 5%;
+    width: 90%;
+    height: auto;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+}
+
+section#status-offering .content {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10vh auto;
+}
+
+section#status-offering .content h3.txt-highlight {
+	margin-bottom: 2.5% !important;
+}
+
+section#status-offering .content p {
+	color: #e2efff;
+	font-size: 14px;
+    font-weight: 100;
+    line-height: 1.5;
+    letter-spacing: .2px;
+    opacity: .95;
+    width: 90%;
+}
+
+section#status-offering .content h2 {
+    color: #e3f9ff;
+    text-shadow: 0 0 10px rgba(228,236,255,.02);
+	font-size: 34px;
+    font-weight: 100;
+    letter-spacing: 0;
+    margin-bottom: 3%;
+}
+
+section#status-offering .content>div:nth-child(odd) {
+    margin: 5vh 5% 5vh auto;
+}
+
+section#status-offering .content>div {
+    width: 40%;
+    max-width: 450px;
+    text-align: left;
+}
+
+section#allocations .allocations-allocations {
+    background: url(../img/allocations-upd-3.svg) center center no-repeat;
+    background-size: contain;
+    height: 250px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+section#allocations .content ul {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0 20px;
 }
