--- a/app/view/token.html
+++ b/app/view/token.html
@@ -183,24 +183,24 @@
 							<li></li>
 						</ul>
 						<ul class="word-list">
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Token Sale – Private, Pre, Public</li>
+							<li>Founders, Team, Early Backers, Advisors</li>
+							<li>Partners' network</li>
+							<li>Validators' incentives</li>
+							<li>Token liquidity for market making</li>
+							<li>Opening balance for the Reserve Credit Fund</li>
+							<li>Incentive programs for Merchants and Users</li>
+							<li>Community grants and partnerships</li>
 						</ul>
 						<ul class="percent-list">
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>42%</li>
+							<li>10%</li>
+							<li>6%</li>
+							<li>7%</li>
+							<li>11%</li>
+							<li>9%</li>
+							<li>12.5%</li>
+							<li>2.5%</li>
 						</ul>
 					</div>
 				</div>
