se agrego ultima seccion

--- a/app/view/token.html
+++ b/app/view/token.html
@@ -205,6 +205,136 @@
 					</div>
 				</div>
 			</section>
+
+			<section id="proceeds">
+				<div class="content">
+					<h3 class="txt-highlight">
+						USE OF PROCEEDS
+					</h3>
+					<div>
+						<div>
+							<ul class="bullet-list">
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
+							<ul class="word-list">
+								<li>Token Sale – Private, Pre, Public</li>
+								<li>Founders, Team, Early Backers, Advisors</li>
+								<li>Partners' network</li>
+								<li>Validators' incentives</li>
+								<li>Token liquidity for market making</li>
+								<li>Opening balance for the Reserve Credit Fund</li>
+								<li>Incentive programs for Merchants and Users</li>
+								<li>Community grants and partnerships</li>
+							</ul>
+							<ul class="percent-list">
+								<li>42%</li>
+								<li>10%</li>
+								<li>6%</li>
+								<li>7%</li>
+								<li>11%</li>
+								<li>9%</li>
+								<li>12.5%</li>
+								<li>2.5%</li>
+							</ul>
+						</div>
+					</div>
+					<div>
+						<div class="proceeds-proceeds"></div>
+					</div>
+				</div>
+			</section>
+
+			<section id="proceeds2">
+				<div class="content">
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Legal & Compliance (10%)
+							</p>
+							<p class="proceeds2-box-title">
+								COTI will use proceeds to lay built a robust, global licensing footprint for its various services – wallets, exchange and payment services.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								R&D (25%)
+							</p>
+							<p class="proceeds2-box-title">
+								COTI will fund the development program encompassing the base layer protocol, the exchange, the consumer and mediator client applications, merchant integration tools, and more.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Marketing (16%)
+							</p>
+							<p class="proceeds2-box-title">
+								Marketing to merchants and consumers will be a key aspect of fuelling the COTI network, building acceptance of COTI’s wallet.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Merchant Services (12%)
+							</p>
+							<p class="proceeds2-box-title">
+								Covers the delivery and maintenance of the non-software merchant services, including hedging services.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Reserve (10%)
+							</p>
+							<p class="proceeds2-box-title">
+								A portion of the proceeds will be set aside as reserve funds for future deployment of the market-maker, legal and compliance, or R&D (depending on requirements for network expansion).
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Market-Maker (10%)
+							</p>
+							<p class="proceeds2-box-title">
+								COTI’s automated market-maker will be seeded with capital in order to establish a healthy functioning market for COTI and other currencies flowing through the network.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								COTI Fund (10%)
+							</p>
+							<p class="proceeds2-box-title">
+								A portion of the proceeds will be set aside to invest in, and assist, other ventures that build upon COTI's technology.
+							</p>
+						</div>
+					</div>
+					<div class="proceeds2-box-container">
+						<div class="proceeds2-box">
+							<p class="proceeds2-box-title">
+								Operational Expenses (7%)
+							</p>
+							<p class="proceeds2-box-title">
+								Covers various operational expenses that will be incurred by COTI.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer>
