--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -1453,6 +1453,9 @@ section#status-offering .content>div {
     text-align: left;
 }
 
+
+/*allocations*/
+
 section#allocations .content {
     display: flex;
     flex-wrap: wrap;
@@ -1461,9 +1464,8 @@ section#allocations .content {
 
 section#allocations .content {
     max-width: 1440px;
-    margin: 0 auto;
     padding: 0 5%;
-    width: 90%;
+    width: 100%;
     height: auto;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -1579,4 +1581,209 @@ section#allocations .content ul {
     position: relative;
     float: left;
     margin: 0 20px;
+}
+
+/*proceeds*/
+
+section#proceeds .content {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto 10vh auto;
+}
+
+section#proceeds .content {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 5%;
+    width: 100%;
+    height: auto;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(1):before {
+    color: #184aaa;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(2):before {
+    color: #2cbedf;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(3):before {
+    color: #50e3c2;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(4):before {
+    color: #ffc15a;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(5):before {
+    color: #ff8337;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(6):before {
+    color: #d7297d;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(7):before {
+    color: #a05be1;
+}
+
+section#proceeds .content ul.bullet-list li:nth-of-type(8):before {
+    color: #8248f3;
+}
+
+section#proceeds .content ul.bullet-list li, section#proceeds .content ul.percent-list li, section#allocations .content ul.word-list li {
+	line-height: 25px;
+    height: 25px;
+}
+
+section#proceeds .content ul {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0 20px;
+    padding: 0;
+}
+
+section#proceeds .content ul li {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.5;
+    opacity: .95;
+}
+
+section#proceeds .content ul.bullet-list li:before {
+    content: "\2022";
+    font-size: 45px;
+    line-height: 25px;
+    display: inline-block;
+}
+
+section#proceeds .content ul {
+    list-style: none;
+    position: relative;
+    float: left;
+    margin: 0 20px;
+}
+
+section#proceeds .content>div {
+    width: 50%;
+    max-width: 400px;
+    text-align: left;
+    margin: 5vh auto;
+}
+
+section#proceeds .content>div:nth-child(even) {
+    margin: 5vh 5% 5vh auto;
+    width: 320px;
+}
+
+section#proceeds .content>div:nth-child(odd) {
+    margin: 5vh auto 5vh 5%;
+}
+
+section#proceeds .content>div {
+    width: 50%;
+    max-width: 400px;
+    text-align: left;
+    margin: 5vh auto;
+}
+
+section#proceeds .content h3 {
+    width: 100%;
+    margin-bottom: 4vh;
+    text-align: center;
+}
+
+section#proceeds .content h3.txt-highlight{
+	margin-bottom: 2.5% !important;
+}
+
+section#proceeds .content ul.bullet-list li, section#proceeds .content ul.percent-list li, section#proceeds .content ul.word-list li {
+    line-height: 25px;
+    height: 25px;
+}
+
+section#proceeds .content ul {
+    list-style: none;
+    position: relative;
+    float: left;
+}
+
+section#proceeds .proceeds-proceeds {
+    background: url(../img/use-of-proceeds.svg) center center no-repeat;
+    background-size: contain;
+    height: 250px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+/*proceeds2*/
+
+section#proceeds2 {
+    display: block;
+    height: auto;
+    text-align: center;
+}
+
+section#proceeds2 .content {
+    height: auto;
+    max-width: 1000px;
+    padding: 2vh 0 5vh 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto 10vh auto;
+}
+
+section#proceeds2 .content {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 5%;
+    width: 90%;
+    height: auto;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+}
+
+section#proceeds2 .proceeds2-box-container {
+    width: 33.33%;
+}
+
+section#proceeds2 .proceeds2-box {
+    width: 280px;
+    height: 215px;
+    margin: 10px auto;
+    box-sizing: border-box;
+}
+
+section#proceeds2 .proceeds2-box .proceeds2-box-title {
+    text-align: left;
+}
+
+section#proceeds2 .proceeds2-box .proceeds2-box-text {
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+section#proceeds2 .proceeds2-box p.proceeds2-box-title {
+    font-size: 17px;
+    font-weight: 100;
+    line-height: 1.5 !important; 
+    letter-spacing: .2px;
+    opacity: .95;
+    color: #3d3a44;
 }
